Gerði html fyrir forsíðu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,90 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>Halló Heimur</p>
+    <header class="header">
+      <div class="header_content">
+        <div class="header_row">
+          <h1 class="header_title">Vöruhúsið</h1>
+          <nav class="header_nav">
+            <ul class="header_list">
+              <li class="header_item"><a href="index.html" class=header_link>Forsíða</a></li>
+              <li class="header_item"><a href="pages/products.html" class=header_link>Vörur</a></li>
+              <li class="header_item"><a href="pages/staff.html" class=header_link>Starfsfólk</a></li>
+              <li class="header_item header_item--button"><a href="pages/cart.html">Karfa(3)</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+
+      <section class="all_products">
+        <div class="all_products_content">
+          <h2 class="all_products_title">Allar vörurnar</h2>
+          <p class="all_products_text">Vöruhúsið hefur allar þær vörur sem þig vantar.</p>
+          <div class="all_products_button">
+            <a href="pages/products.html" class="button button--large">Skoða vörur</a>
+          </div>
+        </div>
+        <div class="all_products_image">
+          <img class="all_products_image" src="img/products.jpg" alt="">
+        </div>
+      </section>
+
+      <section class="about_staff">
+        <div class="all_products_image">
+          <img class="about_staff_image" src="img/team.jpg" alt="">
+        </div>
+        <div class="all_products_content">
+          <h2 class="all_products_title">Besta starfsfólkið</h2>
+          <p class="all_products_text">Starfsfólkið okkar hugsar vel um þig.</p>
+          <div class="all_products_button">
+            <a href="pages/staff.html" class="button button--large">Kynnast starfsfólki</a>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <footer>
+      <div class="footer__row">
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul>
+            <li><a href="products.html">Nauðsynjavörur</a></li>
+            <li><a href="products.html">Frábærar vörur</a></li>
+            <li><a href="products.html">Ómissandi vörur</a></li>
+            <li><a href="products.html">Ótrúlegar vörur</a></li>
+            <li><a href="products.html">Magnaðar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul>
+          <li><a href="products.html">Trylltar vörur</a></li>
+          <li><a href="products.html">Geggjaðar vörur</a></li>
+          <li><a href="products.html">Svakalegar vörur</a></li>
+          <li><a href="products.html">Fáránlegar vörur</a></li>
+          <li><a href="products.html">Klikkaðar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul>
+          <li><a href="products.html">Nýjar vörur</a></li>
+          <li><a href="products.html">Gamlar vörur</a></li>
+          <li><a href="products.html">Skrítnar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Síður</h3>
+          <ul>
+          <li><a href="products.html">Allar vörur</a></li>
+          <li><a href="staff.html">Starfsfólk</a></li>
+          <li><a href="cart.html">Karfa</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
