--- a/pages/staff.html
+++ b/pages/staff.html
@@ -16,8 +16,7 @@
         <ul class="links__head">
           <li><a href="../index.html">Forsíða</a></li>
           <li><a href="products.html">Vörur</a></li>
-          <li><a href="staff.html"><u>Starfsfólk</u>
-          </a>
+          <li><a href="staff.html"><u>Starfsfólk</u></a>
         </li>
         </ul>
         <ul class="header__cart">
