Bætti inn footer

--- a/index.html
+++ b/index.html
@@ -54,44 +54,47 @@
 
     </main>
 
-    <footer>
-      <div class="footer__row">
-        <div class="footer__col">
-          <h3>Vöruflokkar</h3>
-          <ul>
-            <li><a href="products.html">Nauðsynjavörur</a></li>
-            <li><a href="products.html">Frábærar vörur</a></li>
-            <li><a href="products.html">Ómissandi vörur</a></li>
-            <li><a href="products.html">Ótrúlegar vörur</a></li>
-            <li><a href="products.html">Magnaðar vörur</a></li>
-          </ul>
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="footer__row">
+          <div class="footer__col">
+            <h3>Vöruflokkar</h3>
+            <ul class="footer__list">
+              <li><a href="products.html"class="footer__link">Nauðsynjavörur</a></li>
+              <li><a href="products.html" class="footer__link">Frábærar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Ómissandi vörur</a></li>
+              <li><a href="products.html" class="footer__link">Ótrúlegar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Magnaðar vörur</a></li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <h3>Vöruflokkar</h3>
+            <ul class="footer__list">
+              <li><a href="products.html" class="footer__link">Trylltar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Geggjaðar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Svakalegar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Fáránlegar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Klikkaðar vörur</a></li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <h3>Vöruflokkar</h3>
+            <ul class="footer__list">
+              <li><a href="products.html" class="footer__link">Nýjar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Gamlar vörur</a></li>
+              <li><a href="products.html" class="footer__link">Skrítnar vörur</a></li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <h3>Síður</h3>
+            <ul class="footer__list">
+              <li><a href="products.html" class="footer__link">Allar vörur</a></li>
+              <li><a href="staff.html" class="footer__link">Starfsfólk</a></li>
+              <li><a href="cart.html" class="footer__link">Karfa</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="footer__col">
-          <h3>Vöruflokkar</h3>
-          <ul>
-          <li><a href="products.html">Trylltar vörur</a></li>
-          <li><a href="products.html">Geggjaðar vörur</a></li>
-          <li><a href="products.html">Svakalegar vörur</a></li>
-          <li><a href="products.html">Fáránlegar vörur</a></li>
-          <li><a href="products.html">Klikkaðar vörur</a></li>
-          </ul>
-        </div>
-        <div class="footer__col">
-          <h3>Vöruflokkar</h3>
-          <ul>
-          <li><a href="products.html">Nýjar vörur</a></li>
-          <li><a href="products.html">Gamlar vörur</a></li>
-          <li><a href="products.html">Skrítnar vörur</a></li>
-          </ul>
-        </div>
-        <div class="footer__col">
-          <h3>Síður</h3>
-          <ul>
-          <li><a href="products.html">Allar vörur</a></li>
-          <li><a href="staff.html">Starfsfólk</a></li>
-          <li><a href="cart.html">Karfa</a></li>
-          </ul>
-        </div>
+        <p class="footer__copyright">© 2018 Vöruhúsið</p>
       </div>
     </footer>
   </body>
