--- a/pages/cart.html
+++ b/pages/cart.html
@@ -11,21 +11,18 @@
 </head>
 <body>
   <main>
-    <header>
-      <h1>Karfa</h1>
-      <div class="header__menu">
-        <nav>
-          <ul class="header__tags">
-            <li class="header__tag"><a href="../index.html">forsíða</a></li>
-            <li class="header__tag"><a href="../products.html">vörur</a></li>
-            <li class="header__tag"><a href="../staff.html">starfsfólk</a></li>
-          </ul>
-        </nav>
-        <div class="header__chart">
-          <a href="../cart.html"><img src="../img/cart.svg" alt="Cart drawing"></a>
-          <a href="../cart.html">
-          <span>Karfa(3)</span>
-          </a>
+    <header class="header">
+      <div class="header_content">
+        <div class="header_row">
+          <h1 class="header_title">Karfa</h1>
+          <nav class="header_nav">
+            <ul class="header_list">
+              <li class="header_item"><a href="index.html" class=header_link>Forsíða</a></li>
+              <li class="header_item"><a href="pages/products.html" class=header_link>Vörur</a></li>
+              <li class="header_item"><a href="pages/staff.html" class=header_link>Starfsfólk</a></li>
+              <li class="header_item header_item--button"><a href="pages/cart.html">Karfa(3)</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
     </header>
@@ -173,59 +170,50 @@
         </div>
       </div>
     </section>
-    <footer>
-      <div class="footer__row">
-        <div class="footer__col">
-          <section>
-            <h3>Vöruflokkar</h3>
-            <ul class="footer__tags">
-              <li class="footer__tag"><a href="#">Nauðsynjavörur</a></li>
-              <li class="footer__tag"><a href="#">Frábærar vörur</a></li>
-              <li class="footer__tag"><a href="#">Ómissandi vörur</a></li>
-              <li class="footer__tag"><a href="#">Ótrúlegar vörur</a></li>
-              <li class="footer__tag"><a href="#">Magnaðar vörur</a></li>
-            </ul>
-          </section>
-        </div>
-        <div class="footer__col">
-          <section>
-            <h3>Vöruflokkar</h3>
-            <ul class="footer__tags">
-              <li class="footer__tag"><a href="#">Trylltar vörur</a></li>
-              <li class="footer__tag"><a href="#">Geggjaðar vörur</a></li>
-              <li class="footer__tag"><a href="#">Svakalegar vörur</a></li>
-              <li class="footer__tag"><a href="#">Fáranlegar vörur</a></li>
-              <li class="footer__tag"><a href="#">Klikkaðar vörur</a></li>
-            </ul>
-          </section>
-        </div>
-        <div class="footer__col">
-          <section>
-            <h3>Vöruflokkar</h3>
-            <ul class="footer__tags">
-              <li class="footer__tag"><a href="#">Nýjar vörur</a></li>
-              <li class="footer__tag"><a href="#">Gamlar vörur</a></li>
-              <li class="footer__tag"><a href="#">Skrýtnar vörur</a></li>
-            </ul>
-          </section>
-        </div>
-        <div class="footer__col">
-          <section>
-          c<h3>Síður</h3>
-            <ul class="footer__tags">
-              <li class="footer__tag"><a href="#">Allar vörur</a></li>
-              <li class="footer__tag"><a href="#">Starfsfólk</a></li>
-              <li class="footer__tag"><a href="#">Karfa</a></li>
-            </ul>
-          </section>
-        </div>
-      </div>
-      <div class="footer__row">
-        <div class="footer__copy">
-          <span>&copy; 2018 Vöruhúsið</span>
-        </div>
-      </div>
-    </footer>
+
   </main>
+  <footer class="footer">
+    <div class="footer__content">
+      <div class="footer__row">
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul class="footer__list">
+            <li><a href="products.html"class="footer__link">Nauðsynjavörur</a></li>
+            <li><a href="products.html" class="footer__link">Frábærar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Ómissandi vörur</a></li>
+            <li><a href="products.html" class="footer__link">Ótrúlegar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Magnaðar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul class="footer__list">
+            <li><a href="products.html" class="footer__link">Trylltar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Geggjaðar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Svakalegar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Fáránlegar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Klikkaðar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul class="footer__list">
+            <li><a href="products.html" class="footer__link">Nýjar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Gamlar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Skrítnar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Síður</h3>
+          <ul class="footer__list">
+            <li><a href="products.html" class="footer__link">Allar vörur</a></li>
+            <li><a href="staff.html" class="footer__link">Starfsfólk</a></li>
+            <li><a href="cart.html" class="footer__link">Karfa</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="footer__copyright">© 2018 Vöruhúsið</p>
+    </div>
+  </footer>
 </body>
 </html>
