Lagfæringar við header og footer

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -12,15 +12,15 @@
 <body>
   <main>
     <header class="header">
-      <div class="header_content">
-        <div class="header_row">
-          <h1 class="header_title">Karfa</h1>
-          <nav class="header_nav">
-            <ul class="header_list">
-              <li class="header_item"><a href="index.html" class=header_link>Forsíða</a></li>
-              <li class="header_item"><a href="pages/products.html" class=header_link>Vörur</a></li>
-              <li class="header_item"><a href="pages/staff.html" class=header_link>Starfsfólk</a></li>
-              <li class="header_item header_item--button"><a href="pages/cart.html">Karfa(3)</a></li>
+      <div class="header__content">
+        <div class="header__row">
+          <h1 class="header__title">Vöruhúsið</h1>
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item"><a href="index.html" class=header_link>Forsíða</a></li>
+              <li class="header__item"><a href="pages/products.html" class=header_link>Vörur</a></li>
+              <li class="header__item"><a href="pages/staff.html" class=header_link>Starfsfólk</a></li>
+              <li class="header__item header__item--button"><a href="pages/cart.html">Karfa(3)</a></li>
             </ul>
           </nav>
         </div>
