--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
   <body>
     <header class="header">
       <div class="header__content">
+        <h1 class="header__title">Vöruhúsið</h1>
         <div class="header__row">
-          <h1 class="header__title">Vöruhúsið</h1>
-          <nav class="header__nav">
-            <ul class="header__list">
-              <li class="header__item"><a href="index.html" class=header_link>Forsíða</a></li>
-              <li class="header__item"><a href="pages/products.html" class=header_link>Vörur</a></li>
-              <li class="header__item"><a href="pages/staff.html" class=header_link>Starfsfólk</a></li>
-              <li class="header__item header__item--button"><a href="pages/cart.html">Karfa(3)</a></li>
-            </ul>
-          </nav>
+          <div class="header__col">
+            <nav class="header__nav">
+              <ul class="header__list">
+                <li class="header__item"><a href="index.html" class=header_link>Forsíða</a></li>
+                <li class="header__item"><a href="pages/products.html" class=header_link>Vörur</a></li>
+                <li class="header__item"><a href="pages/staff.html" class=header_link>Starfsfólk</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="header__col">
+            <nav class="header__nav">
+              <ul class="header_list">
+                <li class="header__item header__item--button"><a href="pages/cart.html">Karfa(3)</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
     </header>
