--- a/pages/products.html
+++ b/pages/products.html
@@ -34,7 +34,7 @@
     </div>
   </header>
   <main>
-    <section class="products">
+    <section class="product">
       <div class="product__row">
         <div class="product__col">
           <div class="product">
