Footer lagaður, bætt við hover

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vöruhúsið</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -16,24 +17,19 @@
           <div class="header__col">
             <nav class="header__nav">
               <ul class="header__list">
-                <div class="header__list__center">
-                  <li class="header__item"><a href="index.html" class=header_link>Forsíða</a></li>
-                  <li class="header__item"><a href="pages/products.html" class=header_link>Vörur</a></li>
-                  <li class="header__item"><a href="pages/staff.html" class=header_link>Starfsfólk</a></li>
-                </div>
-                <div class="header__list__right">
-                  <li class="header__item header__item--button"><a href="pages/cart.html">Karfa(3)</a></li>
-                </div>
+                <li class="header__item"><a href="../index.html" class=header_link>Forsíða</a></li>
+                <li class="header__item"><a href="products.html" class=header_link>Vörur</a></li>
+                <li class="header__item"><a href="staff.html" class=header_link>Starfsfólk</a></li>
               </ul>
             </nav>
           </div>
-          <!--<div class="header__col">
+          <div class="header__col">
             <nav class="header__nav">
               <ul class="header_list">
-                <li class="header__item header__item--button"><a href="pages/cart.html">Karfa(3)</a></li>
+                <li class="header__item header__item--button"><a href="cart.html">Karfa(3)</a></li>
               </ul>
             </nav>
-          </div>-->
+          </div>
         </div>
       </div>
     </header>
