Breytingar við header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <div class="header__content">
         <h1 class="header__title">Vöruhúsið</h1>
         <div class="header__row">
-          <div class="header__col">
             <nav class="header__nav">
               <ul class="header__list">
                 <li class="header__item"><a href="../index.html" class=header_link>Forsíða</a></li>
@@ -22,14 +21,9 @@
                 <li class="header__item"><a href="staff.html" class=header_link>Starfsfólk</a></li>
               </ul>
             </nav>
+            <a href="cart.html" class="header__cart header__cart--button">Karfa(3)</a>
           </div>
-          <div class="header__col">
-            <nav class="header__nav">
-              <ul class="header_list">
-                <li class="header__item header__item--button"><a href="cart.html">Karfa(3)</a></li>
-              </ul>
-            </nav>
-          </div>
+        </div>
         </div>
       </div>
     </header>
